// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-cluster - navigation using application menu renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`add-cluster - navigation using application menu when navigating to add cluster using application menu renders 1`] = `
<div>
  <div
    class="topBar"
  >
    <div
      class="items"
    >
      <i
        class="Icon material interactive focusable"
        data-testid="home-button"
        tabindex="0"
      >
        <span
          class="icon"
          data-icon-name="home"
        >
          home
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-back"
      >
        <span
          class="icon"
          data-icon-name="arrow_back"
        >
          arrow_back
        </span>
      </i>
      <i
        class="Icon material interactive disabled focusable"
        data-testid="history-forward"
      >
        <span
          class="icon"
          data-icon-name="arrow_forward"
        >
          arrow_forward
        </span>
      </i>
    </div>
    <div
      class="items"
    />
  </div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
      data-testid="status-bar-left"
    >
      <div
        class="item"
      >
        <div
          data-testid="app-update-not-available"
        >
          No new updates available
        </div>
      </div>
    </div>
    <div
      class="rightSide"
      data-testid="status-bar-right"
    />
  </div>
  <div
    class="SettingLayout AddClusters"
    data-testid="add-cluster-page"
  >
    <div
      class="contentRegion"
      id="ScrollSpyRoot"
    >
      <div
        class="content flex column gaps"
      >
        <h2>
          Add Clusters from Kubeconfig
        </h2>
        <p>
          Clusters added here are  
          <b>
            not
          </b>
           merged into the 
          <code>
            ~/.kube/config
          </code>
           file. 
          <a
            href="https://docs.k8slens.dev/main/catalog/add-cluster/"
            rel="noreferrer"
            target="_blank"
          >
            Read more about adding clusters.
          </a>
        </p>
        <div
          class="flex column"
        />
        <div
          class="actions-panel"
        >
          <button
            class="Button primary"
            disabled=""
            type="button"
          >
            Add clusters
          </button>
        </div>
      </div>
      <div
        class="toolsRegion"
      >
        <div
          class="fixed top-[60px]"
        >
          <div>
            <div
              aria-label="Close"
              class="closeButton"
              role="button"
            >
              <i
                class="Icon icon material focusable"
              >
                <span
                  class="icon"
                  data-icon-name="close"
                >
                  close
                </span>
              </i>
            </div>
            <div
              aria-hidden="true"
              class="esc"
            >
              ESC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;
